--- a/Calculus.tex
+++ b/Calculus.tex
@@ -59,12 +59,12 @@
 %%%\tracingonline=1
 \begin{document}
 
-%\printincolor
-\printinblackandwhite
+\printincolor
+%\printinblackandwhite
 \printallanswers
 
-\usethreeDgraphics
-%\usetwoDgraphics
+%\usethreeDgraphics
+\usetwoDgraphics
 
 \input{text/front_matter_and_cover}
 
